Using ResponseEntity class to customize status and header